--- a/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
+++ b/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
@@ -1,4 +1,5 @@
 ﻿@inject IJSRuntime JsRuntime
+@inject LocaleHelper LocaleHelper
 
 <MudItem sm="12">
     @if (IsSkeleton)
@@ -29,10 +30,8 @@
                             </MudItem>
                             <MudItem>
                                 <MudLink Href="@($"https://forge.sp-tarkov.com/mod/{ForgeMod.Id}/{ForgeMod.Slug}/")" Typo="Typo.h6">@ForgeMod.Name</MudLink>
-                                <MudText Typo="Typo.body1" Class="no-pointers no-select">
-                                    By @ForgeMod.GetModdersName()</MudText>
-                                <MudText Typo="Typo.body2" Class="no-pointers no-select">@ForgeMod.Downloads Downloads
-                                </MudText>
+                                <MudText Typo="Typo.body1" Class="no-pointers no-select">By @ForgeMod.GetModdersName()</MudText>
+                                <MudText Typo="Typo.body2" Class="no-pointers no-select">@ForgeMod.Downloads Downloads</MudText>
                                 <MudText Typo="Typo.body2" Class="no-pointers no-select">@ForgeMod.Id ID</MudText>
                             </MudItem>
                         </MudGrid>
@@ -45,40 +44,27 @@
                     <MudCardHeader>
                         <MudGrid>
                             <MudItem sm="8">
-                                <MudText Typo="Typo.h6" Class="no-pointers no-select">
-                                    Version @(latestVersion.Version)</MudText>
-
+                                <MudText Typo="Typo.h6" Class="no-pointers no-select">Version @(latestVersion.Version)</MudText>
                                 @if (!string.IsNullOrEmpty(latestVersion.VirusTotalLink))
                                 {
-                                    <MudLink
-                                        Href="@(latestVersion.VirusTotalLink)">
-                                        Virus Total Results
-                                    </MudLink>
+                                    <MudLink Href="@(latestVersion.VirusTotalLink)">Virus Total Results</MudLink>
                                 }
                             </MudItem>
                             <MudItem sm="4" Class="d-flex flex-column align-end">
-                                <MudText Typo="Typo.body1" Class="no-pointers no-select">
-                                    Created @(latestVersion.GetCreatedDateFormatted())</MudText>
-                                <MudText Typo="Typo.body1" Class="no-pointers no-select">
-                                    Published @(latestVersion.GetPublishedDateFormatted())</MudText>
+                                <MudText Typo="Typo.body1" Class="no-pointers no-select">Created @(latestVersion.GetCreatedDateFormatted())</MudText>
+                                <MudText Typo="Typo.body1" Class="no-pointers no-select">Published @(latestVersion.GetPublishedDateFormatted())</MudText>
                             </MudItem>
                         </MudGrid>
                     </MudCardHeader>
-                    <MudCardContent Class="">
-                        @((MarkupString)latestVersion.Description)
-                    </MudCardContent>
+                    <MudCardContent Class="">@((MarkupString)latestVersion.Description)</MudCardContent>
                 </MudCard>
                 <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default">
-                    <MudCardContent Class="user-markdown">
-                        @((MarkupString)ForgeMod.Description)
-                    </MudCardContent>
+                    <MudCardContent Class="user-markdown">@((MarkupString)ForgeMod.Description)</MudCardContent>
                 </MudCard>
             </MudItem>
             <MudItem sm="4">
                 <MudItem sm="12">
-                    <MudButton Color="Color.Primary" StartIcon="@Icons.Material.Filled.Download"
-                               Variant="Variant.Filled" Class="mb-4"
-                               Style="width: 100%">@($"Download Latest ({latestVersion.Version})")</MudButton>
+                    <MudButton Color="Color.Primary" StartIcon="@Icons.Material.Filled.Download" Variant="Variant.Filled" Class="mb-4" Style="width: 100%">@($"Download Latest ({latestVersion.Version})")</MudButton>
                 </MudItem>
                 <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default">
                     <MudCardContent Class="d-flex flex-column align-start text-overflow">
@@ -86,9 +72,7 @@
                             <MudText Typo="Typo.h6" Class="no-pointers no-select">Details</MudText>
                         </MudItem>
                         <MudText Typo="Typo.body1" Class="no-pointers no-select">Additional Authors</MudText>
-                        <MudText Typo="Typo.caption" Class="pb-2">
-                            @(ForgeMod.GetAdditionalAuthors())
-                        </MudText>
+                        <MudText Typo="Typo.caption" Class="pb-2">@(ForgeMod.GetAdditionalAuthors())</MudText>
                         <MudText Typo="Typo.body1" Class="no-pointers no-select">License</MudText>
                         <MudText Typo="Typo.caption" Class="pb-2">
                             @if (ForgeMod.License is not null)
@@ -133,17 +117,12 @@
 </MudItem>
 
 @code {
-    [Parameter]
-    public bool IsSkeleton { get; set; }
-    [Parameter]
-    public ForgeBase ForgeMod { get; set; }
+    [Parameter] public bool IsSkeleton { get; set; }
+    [Parameter] public ForgeBase ForgeMod { get; set; }
 
     private ForgeModVersion latestVersion
     {
-        get
-        {
-            return ForgeMod.Versions.FirstOrDefault();
-        }
+        get { return ForgeMod.Versions.FirstOrDefault(); }
     }
 
     protected override Task OnAfterRenderAsync(bool firstRender)
