--- a/project/SPTarkov.Launcher/Components/Info/InfoCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Info/InfoCardComponent.razor
@@ -1,14 +1,16 @@
-﻿<MudItem sm="4" Class="setting-on-hover">
+﻿@inject LocaleHelper LocaleHelper
+
+<MudItem sm="4" Class="setting-on-hover">
     <MudLink Href="@Link">
         <MudCard Class="info-card-height cursor-pointer mud-background-gray border-2 border-solid mud-border-lines-default">
             <MudCardHeader>
                 <CardHeaderContent>
-                    <MudText Class="mb-n4 no-pointers no-select" Typo="Typo.caption">Name:</MudText>
+                    <MudText Class="mb-n4 no-pointers no-select" Typo="Typo.caption">@(LocaleHelper.Get("info_card_name")):</MudText>
                     <MudText Typo="Typo.body1">@Name</MudText>
                 </CardHeaderContent>
             </MudCardHeader>
             <MudCardContent Class="pt-2">
-                <MudText Class="mb-n3 no-pointers no-select" Typo="Typo.caption">Description:</MudText>
+                <MudText Class="mb-n3 no-pointers no-select" Typo="Typo.caption">@(LocaleHelper.Get("info_card_desc")):</MudText>
                 <MudText Typo="Typo.body2">@Description</MudText>
             </MudCardContent>
         </MudCard>
