--- a/project/SPTarkov.Launcher/Dialogs/Profile/ProfileAddDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Profile/ProfileAddDialog.razor
@@ -1,6 +1,7 @@
 ﻿@inject ISnackbar Snackbar
 @inject StateHelper StateHelper
 @inject HttpHelper HttpHelper
+@inject LocaleHelper LocaleHelper
 
 <MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default">
     <DialogContent>
@@ -15,13 +16,13 @@
             else
             {
                 <MudForm Model="_request" @bind-IsValid="@_success" Class="gap-2 mt-3">
-                    <MudSelect @bind-Value="_request.Edition" Variant="Variant.Outlined" Label="Edition" Margin="Margin.Dense" Dense="true" Required="true">
+                    <MudSelect @bind-Value="_request.Edition" Variant="Variant.Outlined" Label="@(LocaleHelper.Get("profile_add_edition"))" Margin="Margin.Dense" Dense="true" Required="true">
                         @foreach (var edition in serverEditions)
                         {
                             <MudSelectItem Value="@edition"/>
                         }
                     </MudSelect>
-                    <MudTextField Immediate="true" @bind-Value="_request.Username" Label="Name" Variant="Variant.Outlined" Margin="Margin.Dense" Required="true"/>
+                    <MudTextField Immediate="true" @bind-Value="_request.Username" Label="@(LocaleHelper.Get("profile_add_name"))" Variant="Variant.Outlined" Margin="Margin.Dense" Required="true"/>
                     <PasswordFieldComponent @bind-Password="_request.Password"/>
                     @if (tooltipText != "")
                     {
@@ -31,8 +32,8 @@
                     }
                 </MudForm>
                 <MudContainer Class="mt-3 d-flex justify-end pa-0 gap-2">
-                    <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!_success)" Class="ml-auto" @onclick="RunAddTask">Add</MudButton>
-                    <MudButton Variant="Variant.Filled" Color="Color.Default" @onclick="UserCancelled">Cancel</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!_success)" Class="ml-auto" @onclick="RunAddTask">@(LocaleHelper.Get("profile_add_confirm"))</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Default" @onclick="UserCancelled">@(LocaleHelper.Get("profile_add_cancel"))</MudButton>
                 </MudContainer>
             }
         </MudContainer>
@@ -64,11 +65,11 @@
         _requestInProgress = true;
         try
         {
-            result = await CallServer("Adding profile details to server", "Failed adding profile details to server");
+            result = await CallServer(LocaleHelper.Get("profile_add_task_1"), LocaleHelper.Get("profile_add_task_fail"));
         }
         catch (TaskCanceledException e) when (token.IsCancellationRequested)
         {
-            AbortOrFail("Request Timed out!");
+            AbortOrFail(LocaleHelper.Get("request_timed_out"));
             return;
         }
         catch (HttpRequestException e)
@@ -120,12 +121,14 @@
 
     private void Submit()
     {
-        Snackbar.Add($"Added profile: {_request?.Username}!", Severity.Success);
+        Snackbar.Add($"{LocaleHelper.Get("profile_add_task_success")}: {_request?.Username}!", Severity.Success);
         mudDialog.Close(DialogResult.Ok(true));
     }
 
-    private void AbortOrFail(string message = "Error connecting to server!")
+    private void AbortOrFail(string? message = null)
     {
+        message ??= LocaleHelper.Get("profile_add_task_default");
+
         if (!userCancel)
         {
             Snackbar.Add(message, Severity.Error);
