--- a/project/SPTarkov.Launcher/Dialogs/Profile/ProfileLoginDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Profile/ProfileLoginDialog.razor
@@ -1,6 +1,7 @@
 ﻿@inject ISnackbar Snackbar
 @inject ILogger<ProfileLoginDialog> Logger
 @inject HttpHelper HttpHelper
+@inject LocaleHelper LocaleHelper
 
 <MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default">
     <DialogContent>
@@ -17,7 +18,7 @@
                 <MudForm Model="request" @bind-IsValid="@_success" Class="gap-2 mt-3">
                     @if (MiniProfile != null)
                     {
-                        <MudTextField Immediate="true" @bind-Value="request.Username" Label="Username" Variant="Variant.Outlined" Margin="Margin.Dense" Disabled="true" Required="true" ReadOnly="true"/>
+                        <MudTextField Immediate="true" @bind-Value="request.Username" Label="@(LocaleHelper.Get("profile_login_username"))" Variant="Variant.Outlined" Margin="Margin.Dense" Disabled="true" Required="true" ReadOnly="true"/>
                         @if (MiniProfile.HasPassword)
                         {
                             <PasswordFieldComponent @bind-Password="request.Password"/>
@@ -25,15 +26,15 @@
                     }
                     else
                     {
-                        <MudTextField Immediate="true" @bind-Value="request.Username" Label="Username" Variant="Variant.Outlined" Margin="Margin.Dense" Disabled="false" Required="true"/>
+                        <MudTextField Immediate="true" @bind-Value="request.Username" Label="@(LocaleHelper.Get("profile_login_username"))" Variant="Variant.Outlined" Margin="Margin.Dense" Disabled="false" Required="true"/>
                         <PasswordFieldComponent @bind-Password="request.Password"/>
                     }
                 </MudForm>
             }
 
             <MudContainer Class="mt-3 d-flex justify-end pa-0 gap-2">
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="RunLoginTask">Login</MudButton>
-                <MudButton Variant="Variant.Filled" Color="Color.Default" @onclick="UserCancelled">Close</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="RunLoginTask">@(LocaleHelper.Get("profile_login_confirm"))</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Default" @onclick="UserCancelled">@(LocaleHelper.Get("profile_login_cancel"))</MudButton>
             </MudContainer>
         </MudContainer>
     </DialogContent>
@@ -52,10 +53,8 @@
     private CancellationTokenSource token { get; set; }
     private bool userCancel { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        base.OnInitialized();
-
         if (MiniProfile == null)
         {
             return;
@@ -68,22 +67,24 @@
 
         if (!MiniProfile.HasPassword)
         {
-            Logger.LogInformation($"Profile: {MiniProfile.Username} does not have a password, logging in without dialog");
-            RunLoginTask();
+            Logger.LogInformation("Profile: {MiniProfileUsername} does not have a password, logging in without dialog", MiniProfile.Username);
+            await RunLoginTask();
         }
+
+        await base.OnInitializedAsync();
     }
 
     private async Task RunLoginTask()
     {
-        var result = false;
+        bool result;
         _requestInProgress = true;
         try
         {
-            result = await CallServer("Getting profile details from server", "Failed getting profile details from server");
+            result = await CallServer(LocaleHelper.Get("profile_login_task_1"), LocaleHelper.Get("profile_login_task_fail"));
         }
         catch (TaskCanceledException e) when (token.IsCancellationRequested)
         {
-            AbortOrFail("Request Timed out!");
+            AbortOrFail(LocaleHelper.Get("request_timed_out"));
             return;
         }
         catch (HttpRequestException e)
@@ -148,12 +149,14 @@
 
     private void Submit()
     {
-        Snackbar.Add($"Logged in to {MiniProfile?.Username}!", Severity.Success);
+        Snackbar.Add($"{LocaleHelper.Get("profile_login_task_success")} {MiniProfile?.Username}!", Severity.Success);
         mudDialog.Close(DialogResult.Ok(MiniProfile));
     }
 
-    private void AbortOrFail(string message = "Error connecting to server!")
+    private void AbortOrFail(string message = null)
     {
+        message ??= LocaleHelper.Get("profile_login_task_default");
+
         if (!userCancel)
         {
             Snackbar.Add(message, Severity.Error);
