--- a/project/SPTarkov.Launcher/Pages/ForgeMod.razor
+++ b/project/SPTarkov.Launcher/Pages/ForgeMod.razor
@@ -40,7 +40,7 @@
         }
         catch (Exception e)
         {
-            Logger.LogError($"Exception thrown from ForgeHelper.SearchForMod {e}");
+            Logger.LogError("Exception thrown from ForgeHelper.SearchForMod {Exception}", e);
             return;
         }
 
