--- a/project/SPTarkov.Launcher/Pages/Profile.razor
+++ b/project/SPTarkov.Launcher/Pages/Profile.razor
@@ -11,27 +11,26 @@
 <MudContainer Class="px-8 my-2 pa-0" MaxWidth="MaxWidth.Large">
     <MudContainer Class="pa-0 pb-4">
         <MudButton Disabled="@_buttonDisabled" Variant="Variant.Filled" Color="Color.Dark" OnClick="ReturnToProfiles" StartIcon="@Icons.Material.Filled.ArrowBack" Size="Size.Medium" IconColor="Color.Error">@(LocaleHelper.Get("profile_logout"))</MudButton>
-    </MudContainer>
-    <MudContainer Class="pa-0 pb-4">
-        <ProfileStatsComponent MiniProfile="@selectedMiniProfile"/>
-    </MudContainer>
-    <MudContainer Class="d-flex pa-0 pb-4">
-        <MudPaper Elevation="2" Class="pa-4 mr-4">
-            <MudImage Src="https://placehold.co/150" Elevation="25" Class="rounded-lg"
-                      FallbackSrc="https://placehold.co/150"/>
-        </MudPaper>
-        <MudPaper Elevation="2" Class="pa-4 d-flex flex-column justify-space-between mr-4">
-            <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">₽:</MudText>
-            <MudText Typo="Typo.h6">1,000,000,000</MudText>
-            <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">$:</MudText>
-            <MudText Typo="Typo.h6">1,000,000,000</MudText>
-            <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">€:</MudText>
-            <MudText Typo="Typo.h6">1,000,000,000</MudText>
-            <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">GP:</MudText>
-            <MudText Typo="Typo.h6">1,000,000,000</MudText>
-        </MudPaper>
         <MudButton Disabled="@_buttonDisabled" Variant="Variant.Filled" Color="Color.Primary" OnClick="StartGame" EndIcon="@Icons.Material.Filled.ArrowRight">@(LocaleHelper.Get("profile_start_game"))</MudButton>
     </MudContainer>
+    @* <MudContainer Class="pa-0 pb-4"> *@
+    @*     <ProfileStatsComponent MiniProfile="@selectedMiniProfile"/> *@
+    @* </MudContainer> *@
+    @* <MudContainer Class="d-flex pa-0 pb-4"> *@
+    @*     <MudPaper Elevation="2" Class="pa-4 mr-4"> *@
+    @*         <MudImage Src="https://placehold.co/150" Elevation="25" Class="rounded-lg" FallbackSrc="https://placehold.co/150"/> *@
+    @*     </MudPaper> *@
+    @*     <MudPaper Elevation="2" Class="pa-4 d-flex flex-column justify-space-between mr-4"> *@
+    @*         <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">₽:</MudText> *@
+    @*         <MudText Typo="Typo.h6">1,000,000,000</MudText> *@
+    @*         <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">$:</MudText> *@
+    @*         <MudText Typo="Typo.h6">1,000,000,000</MudText> *@
+    @*         <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">€:</MudText> *@
+    @*         <MudText Typo="Typo.h6">1,000,000,000</MudText> *@
+    @*         <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">GP:</MudText> *@
+    @*         <MudText Typo="Typo.h6">1,000,000,000</MudText> *@
+    @*     </MudPaper> *@
+    @* </MudContainer> *@
 </MudContainer>
 
 @code {
@@ -41,7 +40,7 @@
     protected override void OnInitialized()
     {
         selectedMiniProfile = StateHelper.SelectedProfile;
-        Logger.LogInformation($"Selected profile: {selectedMiniProfile?.Username}");
+        Logger.LogInformation("Selected profile: {Username}", selectedMiniProfile?.Username);
         base.OnInitialized();
     }
 
@@ -51,27 +50,27 @@
         _buttonDisabled = true;
         StateHelper.SetAllowNavigation(false);
 
-        Snackbar.Add("Checking Install");
+        Snackbar.Add(LocaleHelper.Get("profile_page_task_1"));
         if (!await GameHelper.CheckGame())
         {
             var message = GameHelper.ErrorMessage;
-            Snackbar.Add($"Game check failed: {message}", Severity.Error);
+            Snackbar.Add($"{LocaleHelper.Get("profile_page_task_1_fail")}: {message}", Severity.Error);
             return;
         }
 
-        Snackbar.Add("Patching Game");
+        Snackbar.Add(LocaleHelper.Get("profile_page_task_2"));
         if (!await GameHelper.PatchGame())
         {
             var message = GameHelper.ErrorMessage;
-            Snackbar.Add($"Failed to Patch game: {message}", Severity.Error);
+            Snackbar.Add($"{LocaleHelper.Get("profile_page_task_2_fail")}: {message}", Severity.Error);
             return;
         }
 
-        Snackbar.Add($"Launching Game");
+        Snackbar.Add(LocaleHelper.Get("profile_page_task_3"));
         if (!await GameHelper.LaunchGame())
         {
             var message = GameHelper.ErrorMessage;
-            Snackbar.Add($"Game Failed to start: {message}", Severity.Error);
+            Snackbar.Add($"{LocaleHelper.Get("profile_page_task_3_fail")}: {message}", Severity.Error);
             return;
         }
 
@@ -83,7 +82,7 @@
 
         if (!await GameHelper.MonitorGame())
         {
-            Snackbar.Add("Game has closed", Severity.Info);
+            Snackbar.Add(LocaleHelper.Get("profile_page_game_closed"), Severity.Info);
         }
 
         _buttonDisabled = false;
@@ -99,6 +98,6 @@
     private async Task ReturnToProfiles()
     {
         StateHelper.SetSelectedProfile(null);
-        NavigationManager.NavigateTo("/Profiles");
+        NavigationManager.NavigateTo("/ServerPageWrapper");
     }
 }
