--- a/project/SPTarkov.Launcher/Pages/ForgeMod.razor
+++ b/project/SPTarkov.Launcher/Pages/ForgeMod.razor
@@ -3,7 +3,7 @@
 @inject HttpHelper HttpHelper
 @inject ILogger<ForgeMod> Logger
 
-<MudContainer Class="px-8 mt-2 mb-6 pa-0" MaxWidth="MaxWidth.Large">
+<MudContainer Class="px-4 mt-2 mb-6" MaxWidth="MaxWidth.Large">
     <MudGrid>
         @if (searchResponse is null || searchInProgress)
         {
